# C610-smartcashier-demo

./: Qualcomm-QCS610-SoC-SmartCashierApp_UserGuide.docx  README.md  Turbox-C610-SmartCashierApp_UserGuide.docx
SmartCashier/: CMakeLists.txt  Install.sh
SmartCashier/snpe/: README.md
SmartCashier/src/: ObjectDetection.cpp  model_conversion_instruction.md
SmartCashier/test/: SmartCashier.cpp  imagenet_slim_labels.txt
doc/: C610-SmartCashier-doc.docx  Qualcomm-QCS610-SoC-SmartCashier-doc.docx  VideoContent.txt  smartcashier.bb
